--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,73 @@
-$primary-color:#444;
+@import 'config';
+@import 'menu';
+
+*{
+    box-sizing: border-box;
+}
 
 body{
-    background:$primary-color;
+    @include background_image();
+    background:$primary_color;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     color:#fff;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+}
+
+h1,
+h2,
+h3{
+    margin:0;
+    font-weight: $font_weight;
+
+    &.lg-heading{
+        font-size:$size_heading;
+    }
+
+    &.sm-heading{
+        margin-bottom: $small_heading;
+        padding:0.2rem 1rem;
+        background:rgba(0,0,0,0.1);
+    }
+    
+}
+
+a{
+    color: #fff;
+    text-decoration: none;
+}
+
+.header{
+    position:fixed;
+    z-index: $header_z_index;
+    width: 100%;
+}
+
+.text-secondary {
+    color:$secondary_color;
+}
+
+main{
+    padding:4rem;
+    height: $main_height;
+    .icons{
+        margin-top:$main_icons_margin;
+        a{
+            padding:$main_icons_link_padding;
+            &:hover{
+                color:$secondary_color;
+                @include easeOut();
+            }
+        }
+    }
+
+    &#home{
+        overflow: hidden;
+
+        h1{
+            margin-top: 20vh;
+        }
+    }
 }
