--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -38,3 +38,33 @@ $background_opacity:0.9;
         }
     }
 }
+
+//all media query rules
+
+@mixin mediaSm {
+    @media screen and(max-width:568px){
+        @content;
+    }
+    
+}
+
+@mixin mediaMd {
+    @media screen and(max-width:768px){
+        @content;
+    }
+    
+}
+
+@mixin mediaLg {
+    @media screen and (min-width:769px) and (max-width:1170px){
+        @content;
+    }
+    
+}
+
+@mixin mediaXl {
+    @media screen and(min-width:1171px){
+        @content;
+    }
+    
+}
