--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -33,9 +33,19 @@ $background_opacity:0.9;
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background: rgba(0,0,0, $background_opacity);
+                background: rgba($primary_color, $background_opacity);
             }
         }
+    }
+}
+
+//set text color
+
+@function set-text-color($color){
+    @if(lightness($color) > 40){
+        @return #000;
+    }@else{
+        @return #fff;
     }
 }
 
