--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import 'config';
 @import 'menu';
-@import 'mobile';
+
 
 *{
     box-sizing: border-box;
@@ -12,7 +12,7 @@ body{
     height: 100%;
     margin: 0;
     padding: 0;
-    color:#fff;
+    color:set-text-color($primary_color);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
 }
@@ -36,7 +36,7 @@ h3{
 }
 
 a{
-    color: #fff;
+    color:set-text-color($primary_color);
     text-decoration: none;
 }
 
@@ -52,7 +52,7 @@ a{
 
 main{
     padding:4rem;
-    height: $main_height;
+    height: calc(100vh - 60px);
     .icons{
         margin-top:$main_icons_margin;
         a{
@@ -72,3 +72,56 @@ main{
         }
     }
 }
+
+.about-info{
+    display: grid;
+    grid-template-areas: 
+    'bioimage bio bio'
+    'job1 job2 job3';
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+
+
+    .bio-image{
+        grid-area: bioimage;
+        margin: auto;
+        border-radius: 50%;
+        border:3px solid $secondary_color;
+    }
+    
+    .bio{
+        grid-area: bio;
+        font-size: 1.5rem;
+    }
+    
+    .job-1{
+        grid-area: job1;
+    }
+    
+    .job-2{
+        grid-area: job2;
+    }
+    
+    .job-3{
+        grid-area: job3;
+    }
+    
+    .job{
+        background: lighten($primary_color, 5);
+        padding: 0.5rem;
+        border-bottom: 2px solid $secondary_color;
+    }
+}
+
+
+#main-footer{
+    text-align: center;
+    padding: 0.5rem;
+    height: 60px;
+    background: darken($primary_color, 10);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+@import 'mobile';
