work and project page, display grid and mobile responsive

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,10 +1,16 @@
 //widescreen
 @include mediaXl{
+    .projects{
+        grid-template-columns: repeat(4,1fr);
+    }
 
 }
 
 //Desktop and laptop
 @include mediaLg{
+    .projects{
+        grid-template-columns: repeat(3,1fr);
+    }
 
 }
 
@@ -55,6 +61,10 @@
 
         grid-template-columns: 1fr;
     }
+
+    .projects{
+        grid-template-columns: repeat(2,1fr);
+    }
     
 }
 
@@ -79,6 +89,10 @@
             &.lg-heading{
                 font-size: $size_heading - 3rem;
             }
+        }
+
+        .projects{
+            grid-template-columns: 1fr;
         }
 
        
