--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,7 +52,7 @@ a{
 
 main{
     padding:4rem;
-    height: calc(100vh - 60px);
+    height: calc(100% - 60px);
     .icons{
         margin-top:$main_icons_margin;
         a{
@@ -111,6 +111,45 @@ main{
         padding: 0.5rem;
         border-bottom: 2px solid $secondary_color;
     }
+}
+
+.projects{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0.7rem;
+    img{
+        width: 100%;
+        border: 3px solid #fff;
+        &:hover{
+            opacity: 0.5;
+            border-color: $secondary_color;
+            @include easeOut;
+        }
+    }
+}
+
+//button styles
+
+.btn {
+    display: block;
+    padding: 0.5rem 1rem;
+    margin-bottom: 0.3rem;
+    border:0;
+    &:hover{
+        background: $secondary_color;
+        color: set-text-color($secondary_color);
+    }
+}
+
+.btn-dark{
+    @extend .btn;
+    background: darken($primary_color, 50);
+    color: #fff;
+}
+.btn-light{
+    @extend .btn;
+    background: lighten($primary_color, 50);
+    color:#333;
 }
 
 
